# FES_GUIv2026w16d15

./: CMakeLists.txt  GUI.pro  GUI.pro.user.c2a323e  GUI.pro.user.e20d90c  README.md  electrodewindow.cpp  electrodewindow.h  globals.cpp  globals.h  gpioexpander.cpp  gpioexpander.h  historywindow.cpp  historywindow.h  main.cpp  mainwindow.cpp  mainwindow.cpp.save  mainwindow.h  nano.2136.save  sessionwindow.cpp  sessionwindow.cpp.autosave  sessionwindow.h  spihandler.cpp  spihandler.h  spihandler.h.save  startwindow.cpp  startwindow.h
build-local/: CMakeCache.txt
resources/: logo.qrc
spi_transmission_pico/: spi_rpi_to_siggen_test.c
